<resources>
    <string name="app_name">QuizApp</string>
    <string name="app_fields">iOS | Java | HTML | JavaScript</string>
    <string name="app_id">59138897047</string>
    <string name="package_name">com.prembros.programming.quizapp</string>
    <string name="achievement_beginners_luck">CgkIl-nPp9wBEAIQAg</string>
    <string name="achievement_streak_of_5">CgkIl-nPp9wBEAIQAw</string>
    <string name="achievement_streak_of_15">CgkIl-nPp9wBEAIQBA</string>
    <string name="achievement_streak_of_30">CgkIl-nPp9wBEAIQBQ</string>
    <string name="achievement_bummer_star">CgkIl-nPp9wBEAIQBg</string>
    <string name="achievement_bummer_king">CgkIl-nPp9wBEAIQBw</string>
    <string name="achievement_emperor_of_bummerville">CgkIl-nPp9wBEAIQCA</string>
    <string name="leaderboard_rookie__ios">CgkIl-nPp9wBEAIQHA</string>
    <string name="leaderboard_rookie__java">CgkIl-nPp9wBEAIQHQ</string>
    <string name="leaderboard_rookie__html">CgkIl-nPp9wBEAIQHg</string>
    <string name="leaderboard_rookie__javascript">CgkIl-nPp9wBEAIQDg</string>
    <string name="leaderboard_apprentice__ios">CgkIl-nPp9wBEAIQHw</string>
    <string name="leaderboard_apprentice__java">CgkIl-nPp9wBEAIQEA</string>
    <string name="leaderboard_apprentice__html">CgkIl-nPp9wBEAIQIA</string>
    <string name="leaderboard_apprentice__javascript">CgkIl-nPp9wBEAIQEg</string>
    <string name="leaderboard_pro__ios">CgkIl-nPp9wBEAIQFA</string>
    <string name="leaderboard_pro__java">CgkIl-nPp9wBEAIQFQ</string>
    <string name="leaderboard_pro__html">CgkIl-nPp9wBEAIQFg</string>
    <string name="leaderboard_pro__javascript">CgkIl-nPp9wBEAIQFw</string>
    <string name="leaderboard_hitman__ios">CgkIl-nPp9wBEAIQGA</string>
    <string name="leaderboard_hitman__java">CgkIl-nPp9wBEAIQGQ</string>
    <string name="leaderboard_hitman__html">CgkIl-nPp9wBEAIQGg</string>
    <string name="leaderboard_hitman__javascript">CgkIl-nPp9wBEAIQGw</string>
    <string name="colon"> : </string>
    <string name="field_ios">iOS</string>
    <string name="field_java">Java</string>
    <string name="field_html">HTML</string>
    <string name="field_javascript">JavaScript</string>
    <string name="intro">Do you really have what it takes?\nTest your skills in the following fields:</string>
    <string name="intro_difficulty">Now select a difficulty level\nand get on with the test!</string>
    <string name="difficulty_rookie">Rookie</string>
    <string name="difficulty_apprentice">Apprentice</string>
    <string name="difficulty_pro">Pro</string>
    <string name="difficulty_hitman">Hitman</string>
    <string name="google_client_id1234">148149429934-otg1p36p85f41bp9q10h2a9d1p7aceh2.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_questions">Quiz</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
        <item>Ever</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
        <item>-2</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_bookmarks">Bookmarks</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">section: %1$d</string>
    <string name="title_activity_results">Results</string>
    <string name="about_header">About</string>
    <string name="about_the_developers">About the developers</string>
    <string name="about_the_developers_details">
        Prem Suman and Prem Ankur
        \nYes we\'re brothers!
        \nEmail us at:</string>
    <string name="about_the_app">About the App</string>
    <string name="about_the_app_details">
        QuizApp is a series of android apps designed specially for the quiz minds.
        \nThis app consists of the quizzes related to the programming languages.
        \n(Objective C, Java, HTML and Javascript)</string>
    <string name="other_apps_in_quizapp_series">Other apps in QuizApp series:</string>
    <string name="other_apps_in_quizapp_series_details">
        QuizApp-Aptitude(Coming soon)
        \nQuizApp-Science(Coming soon)</string>
    <string name="special_thanks">Special Thanks</string>
    <string name="special_thanks_details">My Parents for the support</string>
    <string name="help_header">Help</string>
    <string name="help_choosing_a_difficulty_level">Choosing a Difficulty level</string>
    <string name="help_choosing_a_difficulty_level_content">
        * You can choose a difficulty level ranging from very easy up to very hard:
        \nRookie - Very easy
        \nApprentice - Fair
        \nPro - Kind of difficult
        \nHitman - Very difficult
    </string>
    <string name="help_during_the_quiz">During the quiz</string>
    <string name="help_during_the_quiz_content">
        * You can change the difficulty by clicking the \'up\' button.
        \n\n* To exit the quiz at any time, press the back button on the action bar.
        \n\n* There is also a skip option in the middle if you want to skip the current question.
    </string>
    <string name="help_bookmarks">Bookmarks</string>
    <string name="help_bookmarks_content">
        * Like a question and want to refer to it later?
        \n\n* Just click on \'add bookmark\' on the top right corner and that\'s it!
        \n\n* You can later view it in the Bookmarks section.
        \n\n* To remove a bookmark, just click on the darkened \'add bookmark\' and it will remove the bookmark!
    </string>
    <string name="help_want_more_features">Want no ads and more features?</string>
    <string name="help_want_more_features_content">
        * Ads can be disabled by purchasing the pro version \nWith the \'Pro\' suffix.(Coming Soon!)
        \n\n* You can purchase the ad-free version from clicking on \'PremBros\' in about section.</string>
    <string name="rate_us">Rate this app?</string>
    <string name="skip_the_current_question">Skip the current question</string>
    <string name="previous_question">Previous question</string>
    <string name="next_question">Next Question</string>
    <string name="add_or_remove_bookmark">Add or remove bookmark</string>
    <string name="title_activity_login">Connect</string>
    <string name="results">Results</string>
    <string name="quiz_results">QuizResult</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in with Google</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect</string>
    <string name="email_id">Email ID: </string>
    <string name="user_name">Username: </string>
    <string name="sign_in">Sign in</string>
    <string name="account">Account</string>
    <string name="detailed_results">Detailed Results</string>
    <string name="your_correct_answers">Your correct answers</string>
    <string name="your_incorrect_answers">Your incorrect answers</string>
    <string name="your_skipped_answers">Your skipped answers</string>
    <string name="close">Close</string>
    <string name="achievements">Achievements</string>
    <string name="leaderboard">Leaderboards</string>
    <string name="delete_this_question">Delete this question</string>
    <string name="clear_all">Clear all</string>
    <string name="get_pro">Get Pro version</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="share">Share</string>
    <string name="email">itsprembros@gmail.com</string>
    <string name="prembros">PremBros</string>
    <string name="visit_us_at">Visit us at:</string>
    <string name="login_intro">Connect with Google Play and keep track of your performance, high scores and achievements.
        \n\nSee how your friends are doing and compete with them.
        \n\nTo get started, press the button below:
    </string>
    <string name="connect_to_google_play_games">Connect to Google Play Games</string>
    <string name="quiz">Quiz</string>
     <string name="int_add_full">ca-app-pub-3940256099942544/6300978111</string>
    <string name="int_add_full1">ca-app-pub-3940256099942544/6300978111</string>
    <string name="int_add_full2">ca-app-pub-3940256099942544/6300978111</string>
    <string name="int_add_full_bookmark">ca-app-pub-3940256099942544/6300978111</string>
    <string name="times_up">Times up!</string>
    <string name="get_pro_content">Pro version comes with the following features:" +
                        "\n\n*No Ads" +
                        "\n*New Questions" +
                        "\n*Personal score history" +
                        "\n\n* you would be helping the developers buy a cup of coffee!
    </string>
    <string name="get_pro_redirect">You will now be taken to our Play Store page." +
                                "\nInstall "QuizApp Pro" from there.
    </string>
    <string name="rate_this_app">Rate this app</string>
</resources>