<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.prembros.programming.proQuizApp.Results">
    <item
        android:id="@+id/action_bookmark"
        android:icon="@drawable/bookmarks_see"
        android:title="@string/bookmarks"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        app:showAsAction="always"
        android:title="@string/share" />
    <item
        android:id="@+id/action_help"
        android:title="@string/help"
        android:icon="@drawable/ic_action_help"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_account"
        android:title="@string/account"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_leaderboard"
        android:title="@string/leaderboard"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_achievements"
        android:title="@string/achievements"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rate_this_app"
        android:title="@string/rate_this_app"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="80"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>