<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.prembros.programming.ProQuizApp.Bookmarks">
    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_action_help"
        android:title="@string/help"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_myScores"
        android:title="@string/my_scores"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear_bookmarks"
        android:title="@string/clear_all"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_rate_this_app"
        android:title="@string/rate_this_app"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>
