<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.dikcoder.prem.quizapp.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_action_help"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.dikcoder.prem.quizapp.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_action_help"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.dikcoder.prem.quizapp.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_action_help"
        android:title="@string/pref_header_data_sync" />

</preference-headers>
