<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/page_bg"
    android:id="@+id/scoreBoard_options"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_horizontal_margin">

    <com.prembros.programming.ProQuizApp.CustomTextViewSemiLight
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scoreboard"
        android:gravity="center"
        android:textSize="20sp"
        android:paddingLeft="30dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:paddingRight="30dp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"/>

    <com.balysv.materialripple.MaterialRippleLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        app:mrl_rippleColor="@color/colorPrimaryDarker"
        app:mrl_rippleOverlay="true"
        app:mrl_rippleHover="true"
        app:mrl_rippleRoundedCorners="2dp">

        <com.prembros.programming.ProQuizApp.CustomTextViewSemiLight
            android:id="@+id/scoreBoard_iOS"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/field_ios"
            android:background="@drawable/button_theme"/>

    </com.balysv.materialripple.MaterialRippleLayout>

    <com.balysv.materialripple.MaterialRippleLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        app:mrl_rippleColor="@color/colorPrimaryDarker"
        app:mrl_rippleOverlay="true"
        app:mrl_rippleHover="true"
        app:mrl_rippleRoundedCorners="2dp">

        <com.prembros.programming.ProQuizApp.CustomTextViewSemiLight
            android:id="@+id/scoreBoard_Java"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/field_java"
            android:background="@drawable/button_theme"/>

    </com.balysv.materialripple.MaterialRippleLayout>

    <com.balysv.materialripple.MaterialRippleLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        app:mrl_rippleColor="@color/colorPrimaryDarker"
        app:mrl_rippleOverlay="true"
        app:mrl_rippleHover="true"
        app:mrl_rippleRoundedCorners="2dp">

        <com.prembros.programming.ProQuizApp.CustomTextViewSemiLight
            android:id="@+id/scoreBoard_HTML"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/field_html"
            android:background="@drawable/button_theme"/>

    </com.balysv.materialripple.MaterialRippleLayout>

    <com.balysv.materialripple.MaterialRippleLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        app:mrl_rippleColor="@color/colorPrimaryDarker"
        app:mrl_rippleOverlay="true"
        app:mrl_rippleHover="true"
        app:mrl_rippleRoundedCorners="2dp">

        <com.prembros.programming.ProQuizApp.CustomTextViewSemiLight
            android:id="@+id/scoreBoard_JavaScript"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/field_javascript"
            android:background="@drawable/button_theme"/>

    </com.balysv.materialripple.MaterialRippleLayout>

</LinearLayout>